--- a/S95.Blazor.Export/S95.Blazor.Export.csproj
+++ b/S95.Blazor.Export/S95.Blazor.Export.csproj
@@ -36,7 +36,7 @@
     
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="DocX" Version="5.0.0" />
+    <PackageReference Include="NPOI" Version="2.7.5" />
     <PackageReference Include="PDFsharp" Version="6.2.2" />
   </ItemGroup>
 
